# Octo

./: .gitignore  Makefile  README.md
paper/: octo.tex
src/: CMakeLists.txt  octo.c  test.c
src/arch/: arch.c  arch.h
src/cli/: cli.c  cli.h
src/core/: arch.h  disas.c  disas.h  dsl.c
src/io/: disas.c  disas.h  io.h  logger.c  logger.h
